--- a/company-website/package.json
+++ b/company-website/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.1.5"
-
+    "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
