--- a/company-website/package.json
+++ b/company-website/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
