--- a/backend-website/.env
+++ b/backend-website/.env
@@ -1,7 +1,7 @@
 PORT=5000
-DB_NAME=registeredusers
+DB_NAME=postgres
 DB_USER=postgres
-DB_PASS=123456
+DB_PASS="123456"
 DB_HOST=localhost
 
 
@@ -10,5 +10,5 @@ DB_HOST=localhost
 JWT_SECRET=jhgdjfbskjbdfkjshfiusdhfkjebf
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
-EMAIL_USER=Praveenkumar.vancharla@gmail.com
-EMAIL_PASS= viye emwg jrgb wvum
+EMAIL_USER=faiyadhussain2001@gmail.com
+EMAIL_PASS=idvjbuokroitmtjw
