--- a/company-website/package.json
+++ b/company-website/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.3",
