--- a/company-website/package.json
+++ b/company-website/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "framer-motion": "^12.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
