--- a/backend-website/.env
+++ b/backend-website/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASS="Swetha_reddy@23"
+DB_PASS=956314
 DB_HOST=localhost
 
 
@@ -10,5 +10,5 @@ DB_HOST=localhost
 JWT_SECRET=jhgdjfbskjbdfkjshfiusdhfkjebf
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
-EMAIL_USER=k.swethareddy23@gmail.com
-EMAIL_PASS= mvdzbpshhqxxmlgi
+EMAIL_USER=mdeeravalisk89@gmail.com
+EMAIL_PASS= cevb qyap zrnw einh
